<resources>
    <string name="app_name">E-kote Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">E-KOTE</string>
    <string name="nav_header_subtitle">Weapon Management System</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="para2">Welcome to the Weapon Management App</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="about">About</string>
    <string name="helpline_amp_support"><![CDATA[Helpline & Support]]></string>
    <string name="dashboard">Dashboard</string>
    <string name="issued_return_date">Issued/Return Date</string>
    <string name="inventory_management">Guns Management</string>

    <string-array name="options_array">
        <item>Admin</item>
        <item>User</item>
    </string-array>

    <string name="title_activity_main2">MainActivity2</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="maintenance">Maintenance</string>
    <string name="logout">Logout</string>
</resources>
