<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/dashboard"
            android:visible="false"/>
        <item
            android:id="@+id/nav_issued_return"
            android:icon="@drawable/issued_return"
            android:title="@string/issued_return_date"
            android:visible="false"/>
        <item
            android:id="@+id/nav_inventory_management"
            android:icon="@drawable/inventorymanagement"
            android:title="@string/inventory_management"
            android:visible="false"/>
        <item
            android:id="@+id/nav_maintenance"
            android:icon="@drawable/maintenance"
            android:title="@string/maintenance"
            android:visible="false"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_helpline"
            android:icon="@drawable/helpline"
            android:title="@string/helpline_amp_support" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"/>



    </group>
</menu>